# libsbsdig

./: 1  CMakeLists.txt  Makefile  Makefile.arch  README.md  cmake_install.cmake  g4_run.sh  genrp_4.5GeV2_conf3_1.root  gmn13.5_elastic_ex.txt  run.sh  saveVar.C  saved_sbsdigcxx  sbsdig.cxx  sbsdigenv.csh  sbsdigenv.sh
cmake/modules/: FindG4SBS.cmake  FindPodd.cmake  FindSBS.cmake
db/: 1  db_genrp_conf_dev.dat_1-13-2021
example/: DigitizationPass.C  ReplayMCDigitized.C  digi_gmn.C  digi_hcal_test.C  digi_test.C  gmn13.5_elastic_prod.txt  output_hcal_test.def  replay_gmn.C  replay_sim_all_test.C  replay_sim_hcal_test.C
libsbsgem/: TGEMSBSBox.cxx  TGEMSBSBox.h  TGEMSBSDBManager.cxx  TGEMSBSDBManager.h  TGEMSBSGEMChamber.cxx  TGEMSBSGEMChamber.h  TGEMSBSGEMHit.cxx  TGEMSBSGEMHit.h  TGEMSBSGEMPlane.cxx  TGEMSBSGEMPlane.h  TGEMSBSGEMSimHitData.cxx  TGEMSBSGEMSimHitData.h  TGEMSBSSimAuxi.cxx  TGEMSBSSimAuxi.h  TGEMSBSSimDigitization.cxx  TGEMSBSSimDigitization.h  TGEMSBSSpec.cxx  TGEMSBSSpec.h
odlCMakeFiles/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
odlCMakeFiles/sbsdig.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  depend.make  flags.make  link.txt
old_rootfile/: genrp_4.5GeV2_conf3_1.root
src/: SBSDigAuxi.cxx  SBSDigAuxi.h  SBSDigBkgdGen.cxx  SBSDigBkgdGen.h  SBSDigGEMDet.cxx  SBSDigGEMDet.h  SBSDigGEMPlane.cxx  SBSDigGEMPlane.h  SBSDigGEMSimDig.cxx  SBSDigGEMSimDig.h  SBSDigPMTDet.cxx  SBSDigPMTDet.h  SBSDigPMTSignal.cxx  SBSDigPMTSignal.h  ToRun  g4sbs_data.cxx  g4sbs_data.h  g4sbs_tree.cxx  g4sbs_tree.h  g4sbs_types.h  gmn_tree.h  sbsdig_LinkDef.h
